2008-12-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/binarystring.hxx, include/pqxx/util.hxx, src/binarystring.cxx,
 src/connection_base.cxx:
  - Disallow pointer-to-smart-pointer assignment, thanks Kirit Saelensminde
  - Removed caching of str(); binarystring is now immutable
2008-12-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/binarystring.hxx:
  - Made binarystring contents const
2008-12-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in, include/pqxx/result.hxx, include/pqxx/util.hxx,
 src/util.cxx:
  - Check for shared_ptr (still needs work; won't always be in std::tr1)
  - Implement PQAlloc as a shared_ptr if available
  - Turn PQ memory freeing functions into shared_ptr-style deleters
  - Make result's result_data const.
2008-12-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/dbtransaction.hxx, include/pqxx/transaction.hxx,
 src/dbtransaction.cxx, src/transaction.cxx,
 test/unit/test_read_transaction.cxx:
  - Added support for read-only transactions.
 tools/pqxx-fulltest:
  - Tried to augment postgresql.conf in wrong place
  - Build postgres without readline
2008-12-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/Makefile.am:
  - Fixed glitch that broke with Solaris "make," thanks Doug.
 test/test_helpers.hxx:
  - Bounds check failure message now includes value of violated boundary
2008-11-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
  - Write postgres config data after initdb, not after building.
2008-11-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/extract_version, tools/preprelease, tools/release:
  - Automating part of release process
 VERSION
  - Use 2-level versions for x.0; more stability among 3-level versions
2008-10-31  Eugene V. Lyubimkin <jackyf.devel@gmail.com>
 test/unit/Makefile.am.template:
  - Added includes to fill 'make check' missing includes when building in
    non-stardard build directory.
 debian/rules:
  - Updated, deleted some cruft.